// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extendWebpackConfig should bundle requiredExternals designated by providedExternals 1`] = `
Object {
  "test": "/path/src/index",
  "use": Array [
    Object {
      "loader": "@americanexpress/one-app-bundler/webpack/loaders/provided-externals-loader",
      "options": Object {
        "moduleName": "test-root-module",
        "providedExternals": Object {
          "ajv": Object {
            "enableFallback": false,
          },
          "chalk": Object {
            "enableFallback": false,
          },
          "lodash": Object {
            "enableFallback": false,
          },
        },
      },
    },
  ],
}
`;

exports[`extendWebpackConfig should bundle requiredExternals designated by providedExternals with custom configuration 1`] = `
Object {
  "test": "/path/src/index",
  "use": Array [
    Object {
      "loader": "@americanexpress/one-app-bundler/webpack/loaders/provided-externals-loader",
      "options": Object {
        "moduleName": "test-root-module",
        "providedExternals": Object {
          "ajv": Object {
            "enableFallback": true,
          },
          "chalk": Object {
            "enableFallback": false,
          },
          "lodash": Object {},
        },
      },
    },
  ],
}
`;

exports[`extendWebpackConfig should enable missing external fallbacks 1`] = `
Object {
  "test": "/path/src/index",
  "use": Array [
    Object {
      "loader": "@americanexpress/one-app-bundler/webpack/loaders/enable-missing-externals-loader",
      "options": Object {
        "enableMissingExternalFallbacks": true,
      },
    },
  ],
}
`;

exports[`extendWebpackConfig should use the correct trailing slash on windows 1`] = `
Object {
  "test": StringMatching /ajv\\\\\\\\\\$/,
  "use": Array [
    Object {
      "loader": "@americanexpress/one-app-bundler/webpack/loaders/externals-loader",
      "options": Object {
        "bundleTarget": undefined,
        "externalName": "ajv",
      },
    },
  ],
}
`;

exports[`extendWebpackConfig should use the correct trailing slash on windows 2`] = `
Object {
  "test": StringMatching /lodash\\\\\\\\\\$/,
  "use": Array [
    Object {
      "loader": "@americanexpress/one-app-bundler/webpack/loaders/externals-loader",
      "options": Object {
        "bundleTarget": undefined,
        "externalName": "lodash",
      },
    },
  ],
}
`;

exports[`extendWebpackConfig should use the correct trailing slash on windows 3`] = `
Object {
  "test": "/path/src/index",
  "use": Array [
    Object {
      "loader": "@americanexpress/one-app-bundler/webpack/loaders/validate-required-externals-loader",
      "options": Object {
        "requiredExternals": Array [
          "ajv",
          "lodash",
        ],
      },
    },
  ],
}
`;

exports[`extendWebpackConfig should use the provided requiredExternals configured 1`] = `
Object {
  "test": StringMatching /ajv\\\\/\\$/,
  "use": Array [
    Object {
      "loader": "@americanexpress/one-app-bundler/webpack/loaders/externals-loader",
      "options": Object {
        "bundleTarget": undefined,
        "externalName": "ajv",
      },
    },
  ],
}
`;

exports[`extendWebpackConfig should use the provided requiredExternals configured 2`] = `
Object {
  "test": StringMatching /lodash\\\\/\\$/,
  "use": Array [
    Object {
      "loader": "@americanexpress/one-app-bundler/webpack/loaders/externals-loader",
      "options": Object {
        "bundleTarget": undefined,
        "externalName": "lodash",
      },
    },
  ],
}
`;

exports[`extendWebpackConfig should use the provided requiredExternals configured 3`] = `
Object {
  "test": "/path/src/index",
  "use": Array [
    Object {
      "loader": "@americanexpress/one-app-bundler/webpack/loaders/validate-required-externals-loader",
      "options": Object {
        "requiredExternals": Array [
          "ajv",
          "lodash",
        ],
      },
    },
  ],
}
`;

exports[`extendWebpackConfig should validate the one app version 1`] = `
Object {
  "test": "/path/src/index",
  "use": Array [
    Object {
      "loader": "@americanexpress/one-app-bundler/webpack/loaders/validate-one-app-compatibility-loader",
      "options": Object {
        "appCompatibility": "^4.41.0",
      },
    },
  ],
}
`;
